rhbz#820283, fdo#55462: sw: better fix for DOCX table import crash:

The fix in 6d2e09db4a677068095b0bebd08fbbb96620d60c is completely bogus.
Only vertically merged boxes result in dummy boxes with negative span,
while horizontally merged boxes result in different numbers of boxes per
line.  So instead of inserting boxes, adjust the width of the last box
in rows that are missing boxes, such that all lines have the same width.

Change-Id: I4e90e852b314bf6f7885bde7b450dab7c668469e